Fixed scrollbar on #main.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -17,10 +17,6 @@ p {
 
 #main {
   padding: 10px 25px;
-
-  overflow-x: auto;
-  overflow-y: scroll;
-
   margin-left: @navWidth;
 
   @import 'blocks/main';
